# SE-star

./: README.md  data.csv  data_91.csv  data_copy.csv  data_save.csv  dune-project  se_star.opam  show.ipynb  show_save.ipynb  test.csv
bazar/: 4h copy.dot  4h.dot  Astar.dot  Astar10.dot  Astar16.dot  Astar4.dot  Astar5.dot  BFS10.dot  BFS4.dot  BFS5.dot  heuristique.dot  heuristique_simple.dot  render.dot  sans.dot
graphs/: 10astar.dot  10bfs.dot  11astar.dot  11bfs.dot  12astar.dot  12bfs.dot  13astar.dot  13bfs.dot  1astar.dot  1bfs.dot  2astar.dot  2bfs.dot  3astar.dot  3bfs.dot  4astar.dot  4bfs.dot  6astar.dot  6bfs.dot  7astar.dot  7bfs.dot  8astar.dot  8bfs.dot  9astar.dot  9bfs.dot
lib/: aux.ml  dune  numbers.ml  prioqueue.ml  prioqueueFoncteur.ml  solver.ml  syntax.ml
test/: dune
